fix(pages): no gap in admin table columns

--- a/client/src/pages/Admin/Admin.module.css
+++ b/client/src/pages/Admin/Admin.module.css
@@ -61,6 +61,7 @@
     display: grid;
     padding: 1rem;
     top: 0;
+    gap: 1rem;
     & > h3 {
         font-weight: 600;
         font-size: 0.875rem;
@@ -72,6 +73,7 @@
     grid-template-columns: repeat(11, 1fr);
     display: grid;
     padding: 1rem;
+    gap: 1rem;
 }
 
 .table-cell {
